--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
     <section class="about">
         <div class="main">
-            <img src="241e010284705e2e0761.jpg">
+            <img src="./241e010284705e2e0761.jpg">
             <div class="about-text">
                 <h2 id="me">About me</h2>
                 <h5>CS student</h5>
