--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                 <h5>Python Project</h5>
                 <p>link du an</p>
                 <p style ="text-align:center;">
-                    <a class="button" href="#">Read more</a>
+                    <a class="button" href="https://github.com/PhuMan1872002/Python_DSLK">Read more</a>
                 </p>
             </div>
 
@@ -81,7 +81,7 @@
                     Link du an
                 </p>
                 <p style ="text-align:center;">
-                    <a class="button" href="#">Read more</a>
+                    <a class="button" href="https://github.com/PhuMan1872002/Ruby_Cay_NP">Read more</a>
                 </p>
             </div>
 
@@ -93,7 +93,7 @@
                     Link du an
                 </p>
                 <p style ="text-align:center;">
-                    <a class="button" href="#">Read more</a>
+                    <a class="button" href="https://github.com/PhuMan1872002/webcuaman">Read more</a>
                 </p>
             </div>
              
