--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 
     <div class="Contact-me" id="cv">
           <p>Here is my cv</p>
-          <a class="button-two" href="#">Click here</a>
+          <a class="button-two" href="./CV-Mẫn.pdf">Click here</a>
     </div> 
 
     <footer>
